Experimenting with HTML, CSS, and JS.

--- a/recipes/chicken-and-gnocchi-soup/index.html
+++ b/recipes/chicken-and-gnocchi-soup/index.html
@@ -9,23 +9,35 @@
 </head>
 
 <body>
-    <header><h1>Chicken And Gnocchi Soup</h1></header>
+    <header>
+        <h1>Chicken And Gnocchi Soup</h1>
+        <div class="servings-row">
+            <h2 id="servings"></h2>
+            <button class="minus" id="minus"></button>
+            <button class="plus" id="plus"></button>
+        </div>
+    </header>
+    <div class="outter-column">
+        <h2>Overview</h2>
+        <p>Yield: <span name="number">1</span> soup</p>
+        <p>Cook Time: <span name="number">45</span> minutes</p>
+    </div>
     <div class="outter-row">
         <div class="inner-column">
             <h2>Ingredients</h2>
             <ul>
-                <li>16 oz cubed chicken breast (cooked)</li>
-                <li>16 oz mini potato gnocchi</li>
-                <li>4 cups chicken broth</li>
-                <li>2 cups half-and-half cream</li>
-                <li>2 cups baby spinach leaves</li>
-                <li>1 cup celery</li>
-                <li>1 cup onion</li>
-                <li>1/2 cup carrots</li>
-                <li>1 tbsp olive oil</li>
-                <li>1/2 tbsp minced garlic</li>
-                <li>1/4 tsp pepper</li>
-                <li>1/4 tsp salt</li>
+                <li><span name="number">16</span> oz cubed chicken breast (cooked)</li>
+                <li><span name="number">16</span> oz mini potato gnocchi</li>
+                <li><span name="number">4</span> cups chicken broth</li>
+                <li><span name="number">2</span> cups half-and-half cream</li>
+                <li><span name="number">2</span> cups baby spinach leaves</li>
+                <li><span name="number">1</span> cup celery</li>
+                <li><span name="number">1</span> cup onion</li>
+                <li><span name="number">1/2</span> cup carrots</li>
+                <li><span name="number">1</span> tbsp olive oil</li>
+                <li><span name="number">1/2</span> tbsp minced garlic</li>
+                <li><span name="number">1/4</span> tsp pepper</li>
+                <li><span name="number">1/4</span> tsp salt</li>
             </ul>
         </div>
         <div class="inner-column">
