--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -9,26 +9,38 @@
 </head>
 
 <body>
-    <header><h1>Italian Meatballs</h1></header>
+    <header>
+        <h1>Italian Meatballs</h1>
+        <div class="servings-row">
+            <h2 id="servings"></h2>
+            <button class="minus" id="minus"></button>
+            <button class="plus" id="plus"></button>
+        </div>
+    </header>
+    <div class="outter-column">
+        <h2>Overview</h2>
+        <p>Yield: <span name="number">30</span> meatballs</p>
+        <p>Cook Time: <span name="number">15</span> minutes</p>
+    </div>
     <div class="outter-row">
         <div class="inner-column">
             <h2>Ingredients</h2>
             <ul>
-                <li>32 oz ground beef</li>
-                <li>2 eggs</li>
-                <li>2 tbsp Italian seasoning</li>
-                <li>2 tsp basil flakes</li>
-                <li>1 tsp ground black pepper</li>
-                <li>1 tsp garlic powder</li>
-                <li>1 tsp salt</li>
+                <li><span name="number">32</span> oz ground beef</li>
+                <li><span name="number">2</span> eggs</li>
+                <li><span name="number">2</span> tbsp Italian seasoning</li>
+                <li><span name="number">2</span> tsp basil flakes</li>
+                <li><span name="number">1</span> tsp ground black pepper</li>
+                <li><span name="number">1</span> tsp garlic powder</li>
+                <li><span name="number">1</span> tsp salt</li>
             </ul>
         </div>
         <div class="inner-column">
             <h2>Utensils</h2>
             <ul>
-                <li>1 large bowl</li>
-                <li>1 baking sheet</li>
-                <li>1 ice cream scooper</li>
+                <li>large bowl</li>
+                <li>baking sheet</li>
+                <li>ice cream scooper</li>
             </ul>
         </div>
     </div>
