Experimenting with HTML, CSS, and JS.

--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -9,16 +9,14 @@
 </head>
 
 <body>
-    <header>
-        <h1>Italian Meatballs</h1>
+    <header><h1>Italian Meatballs</h1></header>
+    <div class="outter-column">
         <div class="servings-row">
-            <h2 id="servings"></h2>
             <button class="minus" id="minus"></button>
+            <h2>Overview</h2>
             <button class="plus" id="plus"></button>
         </div>
-    </header>
-    <div class="outter-column">
-        <h2>Overview</h2>
+        <p id="servings"></p>
         <p>Yield: <span name="number">30</span> meatballs</p>
         <p>Cook Time: <span name="number">15</span> minutes</p>
     </div>
