--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -9,16 +9,14 @@
 </head>
 
 <body>
-    <header>
-        <h1>Iced Brown Sugar Oatmilk Shaken Espresso</h1>
+    <header><h1>Iced Brown Sugar Oatmilk Shaken Espresso</h1></header>
+    <div class="outter-column">
         <div class="servings-row">
-            <h2 id="servings"></h2>
             <button class="minus" id="minus"></button>
+            <h2>Overview</h2>
             <button class="plus" id="plus"></button>
         </div>
-    </header>
-    <div class="outter-column">
-        <h2>Overview</h2>
+        <p id="servings"></p>
         <p>Yield: <span name="number">1</span> coffee</p>
         <p>Cook Time: <span name="number">10</span> minutes</p>
     </div>
