Experimenting with HTML, CSS, and JS.

--- a/recipes/chicken-and-gnocchi-soup/index.html
+++ b/recipes/chicken-and-gnocchi-soup/index.html
@@ -17,21 +17,21 @@
             <button class="plus" id="plus"></button>
         </div>
         <p id="servings"></p>
-        <p>Yield: <span name="number">1</span> soup</p>
-        <p>Cook Time: <span name="number">45</span> minutes</p>
+        <p>Yield: <span name="number">3</span> quarts of soup</p>
+        <p>Cook Time: 40 minutes per large pot</p>
     </div>
     <div class="outter-row">
         <div class="inner-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><span name="number">16</span> oz cubed chicken breast (cooked)</li>
+                <li><span name="number">16</span> oz cooked cubed chicken breast</li>
                 <li><span name="number">16</span> oz mini potato gnocchi</li>
                 <li><span name="number">4</span> cups chicken broth</li>
                 <li><span name="number">2</span> cups half-and-half cream</li>
                 <li><span name="number">2</span> cups baby spinach leaves</li>
-                <li><span name="number">1</span> cup celery</li>
-                <li><span name="number">1</span> cup onion</li>
-                <li><span name="number">1/2</span> cup carrots</li>
+                <li><span name="number">1</span> cup diced celery</li>
+                <li><span name="number">1</span> cup diced onion</li>
+                <li><span name="number">1/2</span> cup diced carrots</li>
                 <li><span name="number">1</span> tbsp olive oil</li>
                 <li><span name="number">1/2</span> tbsp minced garlic</li>
                 <li><span name="number">1/4</span> tsp pepper</li>
@@ -41,26 +41,28 @@
         <div class="inner-column">
             <h2>Utensils</h2>
             <ul>
-                <li>1 large pot with lid</li>
-                <li>1 cutting board</li>
-                <li>1 wooden spoon</li>
+                <li>large pot with lid</li>
+                <li>cutting board</li>
+                <li>wooden spoon</li>
             </ul>
         </div>
     </div>
     <div class="outter-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
-        <p>Cut up the celery, onion, and carrots into small bite-sized pieces. Combine the olive oil, celery, onion, carrots, garlic, pepper, and salt into the large pot.</p>
+        <p>Mix the olive oil, celery, onion, carrots, garlic, pepper, and salt together in the large pot.</p>
         <h3>Step 02</h3>
-        <p>Place the large pot on the stove and set the burner to a medium low heat. Stirring occasionally, let the ingredients simmer for 10 minutes.</p>
+        <p>Place the large pot on the stove and set the burner to a medium-low heat. Stirring occasionally, let the ingredients simmer for 10 minutes.</p>
         <h3>Step 03</h3>
-        <p>Stir in the cubed chicken breast and chicken broth. Stirring occasionally, bring the mixture to a light boil.</p>
+        <p>Stir in the cooked cubed chicken breast and chicken broth. Stirring occasionally, bring the mixture to a light boil.</p>
         <h3>Step 04</h3>
         <p>Stir in the mini potato gnocchi and baby spinach leaves. Let the ingredients cook for 5 minutes.</p>
         <h3>Step 05</h3>
         <p>Stir in the half-and-half cream. Let the ingredients cook for another 5 minutes.</p>
         <h3>Step 06</h3>
-        <p>Turn off the burner and place the lid on the large pot. Let the soup marinate for 10 minutes and enjoy!</p>
+        <p>Turn off the burner and put the lid on the large pot.</p>
+        <h3>Step 07</h3>
+        <p>Let the soup marinate for 10 minutes and enjoy!</p>
     </div>
     <footer>
         <p>This recipe was based on: <a href="https://www.allrecipes.com/recipe/218794/chicken-and-gnocchi-soup">Allrecipes Chicken And Gnocchi Soup</a></p>
