--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -17,19 +17,20 @@
             <button class="plus" id="plus"></button>
         </div>
         <p id="servings"></p>
-        <p>Yield: <span name="number">1</span> coffee</p>
-        <p>Cook Time: <span name="number">10</span> minutes</p>
+        <p>Yield: <span name="number">24</span> oz iced coffee</p>
+        <p>Cook Time: 5 minutes per 24 oz iced coffee</p>
     </div>
     <div class="outter-row">
         <div class="inner-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><span name="number">1/2</span> cup medium roast coffee</li>
-                <li><span name="number">1/2</span> cup oatmilk</li>
-                <li><span name="number">2</span> tbsp light brown sugar</li>
-                <li><span name="number">1/4</span> tsp cinnamon</li>
-                <li><span name="number">1/2</span> tsp vanilla extract</li>
-                <li><span name="number">1 1/2</span> cups ice</li>
+                <li><span name="number">1/2</span> cup concentrated medium roast coffee</li>
+                <li><span name="number">2/3</span> cup oatmilk</li>
+                <li><span name="number">3</span> tbsp cold water</li>
+                <li><span name="number">3</span> tbsp light brown sugar</li>
+                <li><span name="number">1/3</span> tsp cinnamon</li>
+                <li><span name="number">2/3</span> tsp vanilla extract</li>
+                <li><span name="number">2</span> cups ice</li>
             </ul>
         </div>
         <div class="inner-column">
@@ -43,15 +44,15 @@
     <div class="outter-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
-        <p>Brew the coffee. Use the specialty brew option if your coffee maker has it. Since this recipe is using regular coffee instead of espresso, the coffee needs to be more concentrated. If your coffee maker doesn't have a specialty brew option, add twice the amount of coffee grounds you would normally use to brew a cup of coffee.</p>
+        <p>Brew the coffee. The coffee needs to be concentrated for this recipe to taste right.</p>
         <h3>Step 02</h3>
-        <p>Combine the light brown sugar, cinnamon, and vanilla extract in the liquid measuring cup. Then add 3 tbsp of cold water to the mixture. Give it a quick stir and place it in the microwave for 35 seconds. Be sure to watch the mixture in the microwave so it doesn't boil over the edge.</p>
+        <p>Mix the light brown sugar, cinnamon, vanilla extract, and cold water together in the liquid measuring cup. Give the syrup a quick stir and place it in the microwave for 40 seconds. The syrup may try to boil over the edge, stop the microwave before that happens.</p>
         <h3>Step 03</h3>
-        <p>Place roughly 1 cup of ice in the cocktail shaker. Pour the light brown sugar mixture over the ice, then the coffee. Close the cocktail shaker and shake for about 15 seconds.</p>
+        <p>Put the ice in the cocktail shaker. Pour the coffee over the ice, then the syrup. Close the cocktail shaker and shake for 10 seconds.</p>
         <h3>Step 04</h3>
-        <p>Open the cocktail shaker and pour the contents into the container you'll be drinking the coffee out of. Make sure there's still some room left in the container for the oatmilk. Now add the oatmilk and give the drink a light stir.</p>
+        <p>Open the cocktail shaker and pour the coffee into the container you'll be drinking the coffee out of. Make sure there is still room left in the container for the oatmilk. Add the oatmilk and give the drink a light stir.</p>
         <h3>Step 05</h3>
-        <p>Add the remaining 1/2 cup of ice to the container and enjoy!</p>
+        <p>Fill any remaining room in the container with ice and enjoy!</p>
     </div>
     <footer>
         <p>This recipe was based on: <a href="https://athome.starbucks.com/recipe/iced-brown-sugar-oatmilk-shaken-espresso">Starbucks Iced Brown Sugar Oatmilk Shaken Espresso</a></p>
