--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -18,7 +18,7 @@
         </div>
         <p id="servings"></p>
         <p>Yield: <span name="number">30</span> meatballs</p>
-        <p>Cook Time: <span name="number">15</span> minutes</p>
+        <p>Cook Time: 15 minutes per baking sheet</p>
     </div>
     <div class="outter-row">
         <div class="inner-column">
@@ -45,17 +45,19 @@
     <div class="outter-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
-        <p>Preheat the oven to 375 degrees. Combine the eggs, Italian seasoning, basil flakes, black pepper, garlic powder, and salt in the large bowl. Mix the ingredients together thoroughly.</p>
+        <p>Preheat the oven to 375 degrees. Leaving out the ground beef, mix all the ingredients together in the large bowl.</p>
         <h3>Step 02</h3>
-        <p>Place the ground beef into the large bowl and fold the ground beef onto itself until all the ingredients are evenly mixed.</p>
+        <p>Place the ground beef in the large bowl and fold it onto itself until everything is evenly mixed.</p>
         <h3>Step 03</h3>
-        <p>Line the baking sheet with tin foil and fill the sheet with golf ball sized meatballs. An easy way to make golf ball sized meatballs is to scoop the ground beef out with an ice cream scooper.</p>
+        <p>Line the baking sheet with tin foil. Using the ice cream scooper, fill the baking sheet with golf-ball sized meatballs.</p>
         <h3>Step 04</h3>
-        <p>Place the meatballs in the oven for 15 minutes. Make sure to turn the meatballs over halfway through the cook time.</p>
+        <p>Place the meatballs in the oven for 7 1/2 minutes. Take the meatballs out of the oven and flip them all over. Place the meatballs in the oven for another 7 1/2 minutes.</p>
         <h3>Step 05</h3>
-        <p>Take the meatballs out of the oven. Immediately place all the meatballs into another container to separate them out from the grease on the baking sheet.</p>
+        <p>Take the meatballs out of the oven and separate them from the grease on the baking sheet.</p>
         <h3>Step 06</h3>
-        <p>Let the meatballs cool off for about 5 minutes and enjoy!</p>
+        <p>Repeat the last 3 steps for each baking sheet.</p>
+        <h3>Step 07</h3>
+        <p>Let the meatballs cool off for 5 minutes and enjoy!</p>
     </div>
     <footer>
         <p>This recipe was based on: <a href="https://www.allrecipes.com/recipe/278313/easy-meatballs">Allrecipes Easy Meatballs</a></p>
