Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h2>Recipes</h2>
             <a href="./recipes/chicken-and-gnocchi-soup/index.html">Chicken And Gnocchi Soup</a>
             <a href="./recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html">Iced Brown Sugar Oatmilk Shaken Espresso</a>
+            <a href="./recipes/iced-caramel-latte/index.html">Iced Caramel Latte</a>
             <a href="./recipes/italian-meatballs/index.html">Italian Meatballs</a>
         </div>
         <div class="inner-column">
