Experimenting with HTML, CSS, and JS.

--- a/prints/index.html
+++ b/prints/index.html
@@ -14,43 +14,83 @@
     <div class="row">
         <div class="column">
             <h2>Bean Tray</h2>
-            <img src="pictures/bean-tray.jpg">
+            <img src="pictures/bean-tray.JPG">
         </div>
         <div class="column">
             <h2>Bubble Candle</h2>
-            <img src="pictures/bubble-candle.jpg">
+            <img src="pictures/bubble-candle.JPG">
+        </div>
+        <div class="column">
+            <h2>Candle Holder</h2>
+            <img src="pictures/candle-holder.JPG">
         </div>
         <div class="column">
             <h2>Checkered Container</h2>
-            <img src="pictures/checkered-container-closed.jpg">
+            <img src="pictures/checkered-container.JPG">
         </div>
         <div class="column">
-            <h2>Connectable Squares</h2>
-            <img src="pictures/connectable-squares.jpg">
+            <h2>Cookie Monster Eyes</h2>
+            <img src="pictures/cookie-monster-eyes.JPG">
         </div>
         <div class="column">
-            <h2>Desk Hook</h2>
-            <img src="pictures/desk-hook.jpg">
+            <h2>Desk Cable Hook</h2>
+            <img src="pictures/desk-cable-hook.JPG">
+        </div>
+        <div class="column">
+            <h2>Desk Container Hook</h2>
+            <img src="pictures/desk-container-hook.JPG">
+        </div>
+        <div class="column">
+            <h2>Desk Hook V1</h2>
+            <img src="pictures/desk-hook-v1.JPG">
+        </div>
+        <div class="column">
+            <h2>Desk Hook V2</h2>
+            <img src="pictures/desk-hook-v2.JPG">
+        </div>
+        <div class="column">
+            <h2>Desk Organizer</h2>
+            <img src="pictures/desk-organizer.JPG">
         </div>
         <div class="column">
             <h2>Diamond Container</h2>
-            <img src="pictures/diamond-container-closed.jpg">
+            <img src="pictures/diamond-container.JPG">
+        </div>
+        <div class="column">
+            <h2>Drive Tray</h2>
+            <img src="pictures/drive-tray.JPG">
         </div>
         <div class="column">
             <h2>Experimental Gears</h2>
-            <img src="pictures/experimental-gears.jpg">
+            <img src="pictures/experimental-gears.JPG">
         </div>
         <div class="column">
-            <h2>Hexagon Tray</h2>
-            <img src="pictures/hexagon-tray.jpg">
+            <h2>Half And Half Container</h2>
+            <img src="pictures/half-and-half-container.JPG">
+        </div>
+        <div class="column">
+            <h2>Laptop Holder</h2>
+            <img src="pictures/laptop-holder.JPG">
         </div>
         <div class="column">
             <h2>Mario Bomb</h2>
-            <img src="pictures/mario-bomb.jpg">
+            <img src="pictures/mario-bomb.JPG">
         </div>
         <div class="column">
             <h2>Pentahedron</h2>
-            <img src="pictures/pentahedron.jpg">
+            <img src="pictures/pentahedron.JPG">
+        </div>
+        <div class="column">
+            <h2>Stackable Container</h2>
+            <img src="pictures/stackable-container.JPG">
+        </div>
+        <div class="column">
+            <h2>Star</h2>
+            <img src="pictures/star.JPG">
+        </div>
+        <div class="column">
+            <h2>Visor Mount</h2>
+            <img src="pictures/visor-mount.JPG">
         </div>
     </div>
     <hr>
