Experimenting with HTML, CSS, and JS.

--- a/prints/index.html
+++ b/prints/index.html
@@ -65,8 +65,8 @@
             <img src="pictures/experimental-gears.JPG">
         </div>
         <div class="column">
-            <h2>Half And Half Container</h2>
-            <img src="pictures/half-and-half-container.JPG">
+            <h2>Half Pattern Container</h2>
+            <img src="pictures/half-pattern-container.JPG">
         </div>
         <div class="column">
             <h2>Laptop Holder</h2>
