Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <a href="./tools/color-picker/index.html">Color Picker</a>
             <a href="./tools/to-do-list/index.html">To-Do List</a>
         </div>
+        <div class="inner-column">
+            <h2>Random</h2>
+            <a href="./random/create-a-question/index.html">Create A Question</a>
+        </div>
     </div>
     <hr>
     <footer>Created by: Luke Monroe</footer>
