Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="inner-column">
             <h2>Tools</h2>
             <a href="./tools/color-picker/index.html">Color Picker</a>
+            <a href="./tools/sketcher/index.html">Sketcher</a>
             <a href="./tools/to-do-list/index.html">To-Do List</a>
         </div>
         <div class="inner-column">
