Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -9,35 +9,9 @@
 </head>
 
 <body>
-    <header><h1>lukemonroe.github.io</h1></header>
+    <header><h1>Color Picker</h1></header>
     <hr>
-    <div class="outer-column" id="outer-column">
-        <div class="inner-column">
-            <h2>Games</h2>
-            <a href="./games/rocks/index.html">Rocks</a>
-        </div>
-        <div class="inner-column">
-            <h2>Recipes</h2>
-            <a href="./recipes/chicken-and-gnocchi-soup/index.html">Chicken And Gnocchi Soup</a>
-            <a href="./recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html">Iced Brown Sugar Oatmilk Shaken Espresso</a>
-            <a href="./recipes/iced-caramel-latte/index.html">Iced Caramel Latte</a>
-            <a href="./recipes/italian-meatballs/index.html">Italian Meatballs</a>
-        </div>
-        <div class="inner-column">
-            <h2>3D Prints</h2>
-            <a href="./prints/index.html">Print Gallery</a>
-        </div>
-        <div class="inner-column">
-            <h2>Tools</h2>
-            <a href="./tools/color-picker/index.html">Color Picker</a>
-            <a href="./tools/sketcher/index.html">Sketcher</a>
-            <a href="./tools/to-do-list/index.html">To-Do List</a>
-        </div>
-        <div class="inner-column">
-            <h2>Random</h2>
-            <a href="./random/create-a-question/index.html">Create A Question</a>
-        </div>
-    </div>
+    <div class="outer-column" id="outer-column"></div>
     <hr>
     <footer>Created by: Luke Monroe</footer>
 </body>
