Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header><h1>Color Picker</h1></header>
+    <header><h1>lukemonroe.github.io</h1></header>
     <hr>
     <div class="outer-column" id="outer-column"></div>
     <hr>
