--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple color picker.">
+    <meta name="author" content="Luke Monroe">
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
+    <title>lukemonroe.github.io</title>
 </head>
 
 <body>
-    <header><h1>lukemonroe.github.io</h1></header>
+    <header>
+        <h1>lukemonroe.github.io</h1>
+    </header>
     <hr>
     <div class="outer-column" id="outer-column"></div>
     <hr>
