--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
     <title>lukemonroe.github.io</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 
 <body>
