--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 </head>
 
 <body>
-    <header>
-        <h1>lukemonroe.github.io</h1>
-    </header>
+    <header id="header"></header>
     <hr>
     <div class="outer-column" id="outer-column"></div>
     <hr>
