--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A simple color picker.">
+    <meta name="description" content="A simple tool for colors.">
     <meta name="author" content="Luke Monroe">
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
